--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.1.0",
     "@expo-google-fonts/roboto": "^0.1.0",
+    "axios": "^0.21.1",
     "expo": "~41.0.0",
     "expo-file-system": "~11.0.2",
     "expo-font": "~9.1.0",
@@ -18,6 +19,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-dropdown-picker": "^5.1.19",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-web": "~0.13.12",
     "react-router-native": "^5.2.0"
   },
