--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.1.0",
     "@expo-google-fonts/roboto": "^0.1.0",
+    "@react-native-community/datetimepicker": "3.2.0",
     "axios": "^0.21.1",
     "expo": "~41.0.0",
     "expo-file-system": "~11.0.2",
