--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-dropdown-picker": "^5.1.19",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-web": "~0.13.12",
     "react-router-native": "^5.2.0"
