--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-dropdown-picker": "^5.1.19",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-material-dropdown": "^0.11.1",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-web": "~0.13.12",
     "react-router-native": "^5.2.0"
   },
