--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-file-system": "~11.0.2",
     "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
+    "mysql": "^2.18.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
