--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-dropdown-picker": "^5.1.19",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-maps": "0.27.1",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-svg-charts": "^5.4.0",
     "react-native-web": "~0.13.12",
